--- a/seizouqr.html
+++ b/seizouqr.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8" />
-<title>QR照合（整理No→画像マスタ）</title>
+<title>QR照合</title>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="format-detection" content="telephone=no" />
 <style>
@@ -73,7 +73,7 @@
 
   /* ===== 目立つステータスバー ===== */
   .statusBar{
-    display:flex; align-items:center; justify-content:center; gap:16px;
+    display:flex; align-items:center; justify-content:space-between; gap:14px;
     padding:16px 14px;
     border-radius:18px;
     border:3px solid #e5e7eb;
@@ -95,6 +95,39 @@
     background:#fff;
     border:1px solid #d1d5db;
     color:#334155;
+  }
+
+  .statusLeft{
+    display:flex; align-items:baseline; gap:14px; flex-wrap:wrap;
+  }
+  .statusRight{
+    margin-left:auto;
+    display:flex; align-items:baseline; gap:10px;
+    padding:8px 12px;
+    border-radius:14px;
+    background:rgba(255,255,255,.72);
+    border:1px solid rgba(148,163,184,.55);
+    backdrop-filter: blur(6px);
+  }
+  .statusRight .counterLabel{
+    font-size:12px; font-weight:900; color:#334155; letter-spacing:.08em;
+  }
+  #goodCounter{
+    font-size:38px;
+    font-weight:1000;
+    line-height:1;
+    letter-spacing:.06em;
+    color:var(--primary);
+    font-variant-numeric: tabular-nums;
+    text-shadow: 0 1px 0 rgba(255,255,255,.35);
+    min-width: 72px;
+    text-align:right;
+  }
+  .statusRight .counterUnit{
+    font-size:12px; font-weight:800; color:#64748b;
+  }
+  @media (max-width:520px){
+    #goodCounter{ font-size:32px; min-width: 64px; }
   }
   .status--RUNNING{ background:linear-gradient(90deg,#bbf7d0,#f0fdf4); border-color:#4ade80; }
   .status--TRY{ background:linear-gradient(90deg,#bfdbfe,#eff6ff); border-color:#60a5fa; }
@@ -243,13 +276,67 @@
   body.bg-PLAN_STOP{ background:#fdba74; }          /* オレンジ */
   body.bg-MATERIAL_CHANGE{ background:#d8b4fe; }    /* 紫 */
   body.bg-SETUP_CHANGE{ background:#fde047; }       /* 黄 */
+
+  /* Counters */
+  .kpiRow{ display:flex; gap:10px; flex-wrap:wrap; align-items:center; margin-top:12px; }
+  .kpiPill{ font-size:13px; padding:6px 10px; border-radius:999px; border:1px solid #cbd5e1; background:#fff; font-weight:800; }
+  .kpiPill b{ font-size:16px; margin-left:6px; }
+  .kpiPill.muted{ color:#475569; background:#f8fafc; }
+/* ===== デジタル出来高カウンター ===== */
+.statusRight{
+  background: #000;                /* 黒背景 */
+  border: 2px solid #222;
+  box-shadow:
+    inset 0 0 12px rgba(0,0,0,.8),
+    0 4px 12px rgba(0,0,0,.25);
+}
+
+.statusRight .counterLabel{
+  color: #9ca3af;                  /* 薄いグレー */
+  letter-spacing: .2em;
+}
+
+#goodCounter{
+  font-family: "DS-Digital","Digital-7","Orbitron",
+               ui-monospace, monospace;
+  font-size: 44px;
+  font-weight: 700;
+  color: #00ff66;                  /* デジタル緑 */
+  background: #000;
+  padding: 6px 10px;
+  border-radius: 6px;
+  min-width: 120px;
+  text-align: right;
+  letter-spacing: .12em;
+  font-variant-numeric: tabular-nums;
+
+  /* 発光表現 */
+  text-shadow:
+    0 0 4px rgba(0,255,102,.9),
+    0 0 12px rgba(0,255,102,.6),
+    0 0 24px rgba(0,255,102,.35);
+}
+
+.statusRight .counterUnit{
+  color: #9ca3af;
+  margin-left: 4px;
+}
+
+/* モバイル */
+@media (max-width:520px){
+  #goodCounter{
+    font-size: 34px;
+    min-width: 96px;
+  }
+}
+
 </style>
 </head>
 
 <body class="bg-NOT_STARTED">
 <header>
   <div>
-    <h1>QR照合システム（整理No→画像マスタ）</h1>
+    <h1>QR照合システム</h1>
     <div class="sub">基準QRの切り出し値＝整理No → Firestoreマスタ → Storage画像表示</div>
   </div>
 
@@ -276,7 +363,7 @@
         <option>83-500</option><option>89-400</option><option>90-600</option><option>94-300</option><option>RL5</option>
         <option>TPS03-3.5</option><option>あきひと</option><option>キャップ６号機</option><option>キャップ７号機</option>
         <option>30-060</option><option>41-200</option><option>42-250</option><option>49-060</option><option>51-110</option>
-        <option>54-160</option><option>70-080</option><option>76-060</option><option>78-060</option><option>82-045</option>
+        <option>54-160</option><option>70-080</option><option>76-060</option><option>78-060</op11:51 2026/01/20tion><option>82-045</option>
         <option>87-400</option><option>88-400</option><option>91-200</option><option>RL1</option><option>RL3</option><option>RL4</option>
         <option>RMI-1(インサート成型機）</option><option>TPS01-2.7</option><option>TPS02-0.75</option>
         <option>キャップ10号機</option><option>キャップ８号機</option><option>キャップ9号機</option>
@@ -297,12 +384,18 @@
   <!-- ===================== 照合モード ===================== -->
   <section id="viewScan" class="view active">
     <div class="card">
-      <div class="bigLabel">生産（基準＝整理No）</div>
 
       <!-- ★ 目立つステータスバー -->
       <div id="statusBar" class="statusBar status--NOT_STARTED">
-        <div id="prodStateBig" class="statusBig">未開始</div>
-        <div id="statusHint" class="statusSub">基準未設定</div>
+        <div class="statusLeft">
+          <div id="prodStateBig" class="statusBig">未開始</div>
+          <div id="statusHint" class="statusSub">基準未設定</div>
+        </div>
+        <div class="statusRight" aria-label="出来高カウンター">
+          <div class="counterLabel">出来高</div>
+          <div id="goodCounter">0</div>
+          <div class="counterUnit">pcs</div>
+        </div>
       </div>
 
       <div class="baseWrap">
@@ -339,14 +432,16 @@
         <button id="btnMaterialChange" class="stateBtn" type="button">材料替え中</button>
       </div>
       <div>　</div>
+
       <div style="display:flex; gap:10px; flex-wrap:wrap;">
         <button id="resetBtn" class="btn big primary" tabindex="-1">製品切替え</button>
+        <button id="deleteLastBtn" class="btn warn" tabindex="-1">直前ログ削除</button>
         <button id="saveBtn" class="btn" tabindex="-1">ログ保存（CSV）</button>
         <button id="exitBtn" class="btn warn" tabindex="-1">システム終了（自動保存）</button>
       </div>
 
       <div id="mode" class="status">基準QRを読み込んでください</div>
-      <div class="small">切り出し固定：開始=2、長さ=5（空白除去）</div>
+ 
     </div>
 
     <!-- 今日のステータス遷移 -->
@@ -445,6 +540,18 @@ let baseQR = null; // 基準（整理No）
 let isLocked = false;
 let logData = [["時刻","読み込んだQR","切り出し後値","判定","ロック状態","画像情報","ライン","部署","生産ステータス"]];
 
+// ===== Counters =====
+let goodCount = 0;          // 出来高（数量の合計）
+let qtyPerKanban = null;    // qrMaster.quantity（1枚あたり個数）
+
+// Firestore(qrLogs) の docId を logData 行番号と対応づけて保持（直前ログ削除用）
+const qrLogDocIds = [];
+
+// ★ 各ログ行がカウンタに与えた影響（直前ログ削除で巻き戻す用）
+//   logData と同じ行数を維持（ヘッダ行も含めて管理）
+const counterDeltas = [{ good:0 }];
+
+
 let lineName = localStorage.getItem(LINE_KEY) || "";
 let bushoName = localStorage.getItem(BUSHO_KEY) || "";
 
@@ -464,6 +571,7 @@ let prodStatus = PROD_STATUS.NOT_STARTED;
 let __getMasterBySeiriNo = null; // async(seiriNo)=>{imagePath,downloadUrl,...}|null
 let __saveMaster = null;         // async(seiriNo,file)=>{imagePath,downloadUrl}
 let __loadLineStatus = null;     // async(line)=>{...}|null  ★追加（起動時復元用）
+let __getQtyBySeiriNo = null;   // async(seiriNo)=>number|null  ★追加（1枚あたり個数）
 
 /* Firestore書込み（module側が準備できたら注入） */
 let __firestoreLogRow = null;    // qrLogs
@@ -483,6 +591,10 @@ const $baseDisplay = document.getElementById("baseDisplay");
 const $productImage = document.getElementById("productImage");
 const $imgHint = document.getElementById("imgHint");
 const $resetBtn = document.getElementById("resetBtn");
+const $deleteLastBtn = document.getElementById("deleteLastBtn");
+
+// Counters UI
+
 const $masterHit = document.getElementById("masterHit");
 const $masterMiss = document.getElementById("masterMiss");
 
@@ -588,6 +700,32 @@ function showImage(url){
     $productImage.src=url; $productImage.style.display="block"; $imgHint.style.display="none";
   }
 }
+
+function updateCountersUI(){
+  const el = document.getElementById("goodCounter");
+  if(el) el.textContent = String(goodCount||0);
+}
+
+// lineStatus にカウンタも一緒に保存（復元で引き継ぐ）
+async function persistLineStatus(reason){
+  if(!lineName || typeof window.__writeLineStatus !== "function") return;
+  try{
+    await window.__writeLineStatus(lineName, {
+      state: statusKeyFromText(prodStatus),
+      stateText: prodStatus,
+      reason: reason || "COUNTER_UPDATE",
+      product: baseQR || null,
+      updatedAt: new Date().toISOString(),
+      busho: bushoName || null,
+      lockState: isLocked ? "LOCKED" : "UNLOCK",
+      goodCount: goodCount || 0,
+      qtyPerKanban: (qtyPerKanban==null? null : qtyPerKanban)
+    });
+  }catch(e){
+    console.warn("persistLineStatus error:", e);
+  }
+}
+
 function showNoImage(html){
   $productImage.style.display="none"; $imgHint.style.display="block"; $imgHint.innerHTML = html || "";
 }
@@ -603,10 +741,17 @@ function downloadCSV(rows, baseName="qr_log"){
 }
 
 /* Firestoreログ保存（CSV + Firestore(qrLogs)） */
-function logRow(row){
+function logRow(row, delta={good:0}){
   logData.push(row);
+  counterDeltas.push({
+    good:   (delta && typeof delta.good   === 'number' && isFinite(delta.good))   ? delta.good   : 0
+  });
+
+  const idx = logData.length - 1;
   if(typeof __firestoreLogRow === "function"){
-    __firestoreLogRow(row).catch(()=>{});
+    Promise.resolve(__firestoreLogRow(row))
+      .then((docId)=>{ if(docId) qrLogDocIds[idx] = docId; })
+      .catch(()=>{});
   }
 }
 
@@ -812,6 +957,11 @@ async function applyRestoredState(state){
   const restoredBase = state && state.product ? String(state.product) : null;
   const restoredLock = state && state.lockState ? String(state.lockState) : "UNLOCK";
 
+  // 0) counters (復元)
+  goodCount = (state && typeof state.goodCount === "number") ? state.goodCount : 0;
+  qtyPerKanban = (state && (typeof state.qtyPerKanban === "number")) ? state.qtyPerKanban : null;
+  updateCountersUI();
+
   // 1) baseQR
   baseQR = restoredBase || null;
   updateBaseDisplay(baseQR);
@@ -885,6 +1035,9 @@ async function restoreFromFirebase(){
       // まだ何も無ければ初期表示のまま
       prodStatus = PROD_STATUS.NOT_STARTED;
       baseQR = null;
+      goodCount = 0;
+      qtyPerKanban = null;
+      updateCountersUI();
       setLock(false);
       renderProdStatus();
       updateBaseDisplay(null);
@@ -956,6 +1109,22 @@ async function processQR(qrRaw){
     baseQR = sliced;
     updateBaseDisplay(baseQR);
 
+
+    // ★ 1枚あたり個数（qrMaster.quantity）を取得 → 出来高カウンタに使用
+    try{
+      if(__getQtyBySeiriNo){
+        const q = await __getQtyBySeiriNo(baseQR);
+        qtyPerKanban = (typeof q === 'number' && isFinite(q) && q > 0) ? q : null;
+      }else{
+        qtyPerKanban = null;
+      }
+    }catch(e){
+      console.warn('LOAD_QTY failed:', e);
+      qtyPerKanban = null;
+    }
+    updateCountersUI();
+    persistLineStatus('BASE_QR_SET');
+
     // ★ 基準QR読込後 → 生産中
     setProdStatus(PROD_STATUS.RUNNING, "BASE_QR_SET");
 
@@ -984,7 +1153,7 @@ async function processQR(qrRaw){
       showNoImage("画像マスタ検索エラー（コンソール確認）");
     }
 
-    logRow([now, qrRaw, sliced, "SET_BASE", isLocked?"LOCKED":"UNLOCK", imageInfo, lineName, bushoName, prodStatus]);
+    logRow([now, qrRaw, sliced, "SET_BASE", isLocked?"LOCKED":"UNLOCK", imageInfo, lineName, bushoName, prodStatus], {good:0});
     return;
   }
 
@@ -993,7 +1162,7 @@ async function processQR(qrRaw){
     if(qrRaw===ADMIN_QR){
       setLock(false); showOK();
       $mode.textContent="解除されました。照合を再開します。";
-      logRow([now, qrRaw, sliced, "UNLOCK_BY_ADMIN", "UNLOCK", "", lineName, bushoName, prodStatus]);
+      logRow([now, qrRaw, sliced, "UNLOCK_BY_ADMIN", "UNLOCK", "", lineName, bushoName, prodStatus], {good:0});
 
       // ★ ロック解除を lineStatus に反映（同じステータスでも lockState は更新される）
       if(lineName && typeof window.__writeLineStatus === "function"){
@@ -1009,21 +1178,29 @@ async function processQR(qrRaw){
       }
     }else{
       showNGPersistent();
-      logRow([now, qrRaw, sliced, "LOCK_REJECT", "LOCKED", "", lineName, bushoName, prodStatus]);
+      logRow([now, qrRaw, sliced, "LOCK_REJECT", "LOCKED", "", lineName, bushoName, prodStatus], {good:0});
     }
     return;
   }
-
   // 3) 判定
   const judgedOK = (sliced===baseQR);
+  let deltaGood = 0;
   if(judgedOK){
     showOK();
-    logRow([now, qrRaw, sliced, "OK", "UNLOCK", "", lineName, bushoName, prodStatus]);
+    // ★ 出来高（個数）カウント：qrMaster.quantity を加算
+    const q = (qtyPerKanban==null? 0 : qtyPerKanban);
+    deltaGood = (typeof q === "number" && isFinite(q) && q > 0) ? q : 0;
+    goodCount += deltaGood;
+    updateCountersUI();
+    persistLineStatus("SCAN_OK");
+    logRow([now, qrRaw, sliced, "OK", "UNLOCK", "", lineName, bushoName, prodStatus], {good:deltaGood});
   }else{
     showNGPersistent();
     setLock(true);
     $mode.textContent="NG！管理者QRを読み込んでください";
-    logRow([now, qrRaw, sliced, "NG", "LOCKED", "", lineName, bushoName, prodStatus]);
+    updateCountersUI();
+    persistLineStatus("SCAN_NG");
+    logRow([now, qrRaw, sliced, "NG", "LOCKED", "", lineName, bushoName, prodStatus], {good:0});
 
     // ★ NGロックを lineStatus に反映（同じステータスでも lockState は更新される）
     if(lineName && typeof window.__writeLineStatus === "function"){
@@ -1052,6 +1229,11 @@ document.getElementById("resetBtn").addEventListener("click", ()=>{
   setProdStatus(PROD_STATUS.SETUP_CHANGE, "RESET_BTN");
 
   baseQR=null;
+  // ★ カウンタもリセット（製品切替え）
+  goodCount = 0;
+  qtyPerKanban = null;
+  updateCountersUI();
+  persistLineStatus("RESET");
   setLock(false);
   clearMarks();
   updateBaseDisplay(null);
@@ -1062,37 +1244,42 @@ document.getElementById("resetBtn").addEventListener("click", ()=>{
   $mode.textContent="基準QRを読み込んでください";
   logRow([nowString(), "-", "-", "RESET", "UNLOCK", "", lineName, bushoName, prodStatus]);
 });
+
+// ===== 直前ログ削除（読みミス修正） =====
+$deleteLastBtn && $deleteLastBtn.addEventListener("click", async ()=>{
+  if(logData.length <= 1){ alert("削除できるログがありません。"); return; }
+  const last = logData[logData.length-1];
+  const judge = last && last[3] ? String(last[3]) : "";
+  const ok = confirm(`直前のログを削除しますか？
+
+${last.join(' / ')}`);
+  if(!ok) return;
+
+  const idx = logData.length - 1;
+  const docId = qrLogDocIds[idx];
+  const delta = counterDeltas[idx] || {good:0};
+
+  // 画面側（CSV用）から削除
+  logData.pop();
+  qrLogDocIds.pop();
+  counterDeltas.pop();
+
+  // Firestore(qrLogs) 側も削除（docIdが取れている場合）
+  if(docId && typeof window.__deleteQrLogDoc === "function"){
+    try{ await window.__deleteQrLogDoc(docId); }
+    catch(e){ console.warn("delete qrLogs failed:", e); }
+  }
+
+  // ★ カウンタ巻き戻し（誤読修正）
+  goodCount   = Math.max(0, (goodCount||0)   - (delta.good||0));
+  updateCountersUI();
+  persistLineStatus("DELETE_LAST");
+
+  alert("直前ログを削除しました（カウンタも巻き戻しました）。\nFirestore側は docId 取得できた場合のみ削除します。");
+});
+
 document.getElementById("saveBtn").addEventListener("click", ()=>downloadCSV(logData));
 document.getElementById("exitBtn").addEventListener("click", ()=>{ downloadCSV(logData,"qr_log"); window.close(); });
-let wakeLock = null;
-
-async function requestWakeLock() {
-  try {
-    if ('wakeLock' in navigator) {
-      wakeLock = await navigator.wakeLock.request('screen');
-      console.log('Wake Lock acquired');
-
-      wakeLock.addEventListener('release', () => {
-        console.log('Wake Lock released');
-      });
-    }
-  } catch (err) {
-    console.warn('Wake Lock failed:', err);
-  }
-}
-
-// ページ表示時に取得
-document.addEventListener('visibilitychange', () => {
-  if (document.visibilityState === 'visible') {
-    requestWakeLock();
-  }
-});
-
-// 初回ロード時
-window.addEventListener('load', () => {
-  requestWakeLock();
-});
-  
 </script>
 
 <!-- Firebase SDK -->
@@ -1101,7 +1288,7 @@ window.addEventListener('load', () => {
   import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-analytics.js";
   import { getAuth, signInAnonymously } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js";
   import {
-    getFirestore, doc, getDoc, setDoc, collection, addDoc, serverTimestamp,
+    getFirestore, doc, getDoc, setDoc, collection, addDoc, serverTimestamp, deleteDoc,
     query, where, orderBy, limit, onSnapshot
   } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js";
   import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-storage.js";
@@ -1124,6 +1311,8 @@ window.addEventListener('load', () => {
   const db = getFirestore(app);
   const storage = getStorage(app);
 
+  const QR_MASTER_COLLECTION = "qrMaster"; // {seiriNo}.quantity を参照
+
   const statusEl = document.getElementById("firebaseStatus");
   const storageEl = document.getElementById("storageStatus");
   const setStatus = (t,c)=>{ statusEl.textContent=`Firebase: ${t}`; statusEl.style.color=c; };
@@ -1138,6 +1327,30 @@ window.addEventListener('load', () => {
     setStatus("未接続（認証エラー）","#dc2626");
     setStorage("未準備（認証エラー）","#dc2626");
   }
+
+  // ★ 1回あたり個数（qrMaster/{seiriNo}.quantity）を取得
+  //    quantity登録アプリ（dashboard_integrated）に合わせて、docId=切り出し値、field=quantity を参照する
+  window.__getQtyBySeiriNo = async (seiriNo) => {
+    const key = String(seiriNo||"").trim();
+    if(!key) return null;
+    try{
+      const snap = await getDoc(doc(db, QR_MASTER_COLLECTION, key));
+      if(!snap.exists()) return null;
+      const data = snap.data() || {};
+      const q = Number(data.quantity);
+      return (isFinite(q) && q > 0) ? q : 1;
+    }catch(e){
+      console.warn("getQty error:", e);
+      return null;
+    }
+  };
+
+  // ★ qrLogs ドキュメント削除（直前ログ削除用）
+  window.__deleteQrLogDoc = async (docId) => {
+    const id = String(docId||"").trim();
+    if(!id) return;
+    await deleteDoc(doc(db, "qrLogs", id));
+  };
 
   // 画像マスタ取得：imageMasters/{seiriNo}
   window.__getMasterBySeiriNo = async (seiriNo) => {
@@ -1203,6 +1416,8 @@ window.addEventListener('load', () => {
   __saveMaster = window.__saveMaster;
   // eslint-disable-next-line no-undef
   __loadLineStatus = window.__loadLineStatus;
+  // eslint-disable-next-line no-undef
+  __getQtyBySeiriNo = window.__getQtyBySeiriNo;
 
   // qrLogs 保存
   // eslint-disable-next-line no-undef
@@ -1210,7 +1425,7 @@ window.addEventListener('load', () => {
     try{
       const [ts, raw, sliced, judge, lockState, imageInfo, line, busho, prodStatus] = row;
 
-      await addDoc(collection(db, "qrLogs"), {
+      const docRef = await addDoc(collection(db, "qrLogs"), {
         ts, raw, sliced, judge, lockState,
         imageInfo: imageInfo || null,
         line, busho,
@@ -1224,9 +1439,12 @@ window.addEventListener('load', () => {
         readAtText: ts,
         result: judge
       });
+
+      return docRef.id;
     }catch(e){
       console.warn("Firestore write fail(qrLogs):", e);
       setStatus("エラー（保存失敗）","#dc2626");
+      return null;
     }
   };
 
