--- a/jisseki.html
+++ b/jisseki.html
@@ -1347,12 +1347,12 @@ function makeSharedXAxisOptions(){
         </div>
 
         <div class="mini-panel" style="margin-bottom:10px;">
-          <div class="mini-label">ステータス（小）</div>
+          <div class="mini-label">ステータス</div>
           <div class="mini-chart"><canvas id="pairStatus_${cssSafe(line)}"></canvas></div>
         </div>
 
         <div class="mini-panel">
-          <div class="mini-label">生産推移（小）</div>
+          <div class="mini-label">生産数推移</div>
           <div class="mini-chart prod"><canvas id="pairProd_${cssSafe(line)}"></canvas></div>
         </div>
       `;
