--- a/jisseki.html
+++ b/jisseki.html
@@ -1547,13 +1547,13 @@ lines.forEach(line=>{
               boxHeight: 10,
               padding: 10,
               generateLabels: () => ([
-                { text:'🟢 生産中', fillStyle: statusColors.RUNNING, strokeStyle: statusColors.RUNNING, lineWidth: 0 },
-                { text:'🔍 トライ', fillStyle: statusColors.TRY, strokeStyle: statusColors.TRY, lineWidth: 0 },
-                { text:'⛔ 異常停止', fillStyle: statusColors.ABNORMAL_STOP, strokeStyle: statusColors.ABNORMAL_STOP, lineWidth: 0 },
-                { text:'🛑 計画停止', fillStyle: statusColors.PLAN_STOP, strokeStyle: statusColors.PLAN_STOP, lineWidth: 0 },
-                { text:'📦 材料替え', fillStyle: statusColors.MATERIAL_CHANGE, strokeStyle: statusColors.MATERIAL_CHANGE, lineWidth: 0 },
-                { text:'🔧 段替え', fillStyle: statusColors.SETUP_CHANGE, strokeStyle: statusColors.SETUP_CHANGE, lineWidth: 0 },
-                { text:'⏹ 未開始', fillStyle: statusColors.NOT_STARTED, strokeStyle: statusColors.NOT_STARTED, lineWidth: 0 }
+                { text:'生産中', fillStyle: statusColors.RUNNING, strokeStyle: statusColors.RUNNING, lineWidth: 0 },
+                { text:'トライ', fillStyle: statusColors.TRY, strokeStyle: statusColors.TRY, lineWidth: 0 },
+                { text:'異常停止', fillStyle: statusColors.ABNORMAL_STOP, strokeStyle: statusColors.ABNORMAL_STOP, lineWidth: 0 },
+                { text:'計画停止', fillStyle: statusColors.PLAN_STOP, strokeStyle: statusColors.PLAN_STOP, lineWidth: 0 },
+                { text:'材料替え', fillStyle: statusColors.MATERIAL_CHANGE, strokeStyle: statusColors.MATERIAL_CHANGE, lineWidth: 0 },
+                { text:'段替え', fillStyle: statusColors.SETUP_CHANGE, strokeStyle: statusColors.SETUP_CHANGE, lineWidth: 0 },
+                { text:'未開始', fillStyle: statusColors.NOT_STARTED, strokeStyle: statusColors.NOT_STARTED, lineWidth: 0 }
               ])
             }
           },
