--- a/seizouqr.html
+++ b/seizouqr.html
@@ -1203,6 +1203,10 @@ document.addEventListener("keydown", (e)=>{
 async function processQR(qrRaw){
   const now = nowString();
   const sliced = cutQR(qrRaw);
+  // ★ QRが読まれたら「生産中」へ戻す（ただしNGロック中は戻さない）
+  if (baseQR && !isLocked && prodStatus !== PROD_STATUS.RUNNING) {
+    setProdStatus(PROD_STATUS.RUNNING, "FORCE_RUNNING_BY_SCAN");
+  }
 
   // 1) 基準セット（切り出し値＝整理No）
   if(!baseQR){
