--- a/quality_andon.html
+++ b/quality_andon.html
@@ -527,7 +527,7 @@
     };
     localStorage.setItem("anomaly_prefill_data", JSON.stringify(anomalyPreFillData));
 
-    const anomalyAppUrl = "./abnormality_history.html";
+    const anomalyAppUrl = "./abnreports.html";
     window.open(anomalyAppUrl, "_blank");
   }
 
